@@ -5,6 +5,9 @@ Changelog
 2.2.3 (unreleased)
 ------------------
 
+- Made mail view XSS-save using the safe-html transform for the mail-body display.
+  [phgross]
+
 - Fix an issue while generating links to image-attachments in mails.
   [deiferni]
 
